examples/test/testpolicy16686.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16686
  namespace: namespace386
spec:
  podSelector:
    matchLabels:
      key11: value41
      key4: value11
      key19: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value36
      podSelector:
        matchLabels:
          key11: value25
          key22: value24
          key32: value16
